@@ -132,10 +132,7 @@ _icon_signal_emit(Elm_Layout_Smart_Data *sd,
    char buf[1024];
    const char *type;
 
-   if (sub_d->type != SWALLOW ||
-       (strcmp("elm.swallow.icon", sub_d->part) &&
-        (strcmp("elm.swallow.end", sub_d->part))))
-     return;
+   if (sub_d->type != SWALLOW) return;
 
    if (strncmp(sub_d->part, "elm.swallow.", sizeof("elm.swallow.") - 1) == 0)
      type = sub_d->part + sizeof("elm.swallow.") - 1;
@@ -160,8 +157,7 @@ _text_signal_emit(Elm_Layout_Smart_Data *sd,
    char buf[1024];
    const char *type;
 
-   if (sub_d->type != TEXT || strcmp("elm.text", sub_d->part))
-     return;
+   if (sub_d->type != TEXT) return;
 
    Elm_Widget_Smart_Data *wd = eo_data_scope_get(sd->obj, ELM_OBJ_WIDGET_CLASS);
 
